integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__mint_v2_delegate_and_freeze_v2.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
assertion_line: 36
expression: response
---
{
  "interface": "V1_NFT",
  "id": "39yBMNhayqjPPoyCoaHsMTpzZEqHSh6j9UmHG1ZeJvNm",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "GA2ZzC8EuHyGRZGPmDLmd69HxcQi1dB2FXYcSMSmBvYg",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EHnEc36MD4gW2VvnJZ8LCDovJFRamyWSgfAh9EckHSdP",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 1,
    "asset_hash": "G9vm5HkvVriDHhHZmsCn8GZkYpKVBUCWh2jRF7WrUat",
    "tree": "Gcs24i6jmVs4cxq2wQgRFphZ7dXRoBX7Xbp7FY7FnW92",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": true,
    "non_transferable": false,
    "delegated": true,
    "delegate": "HqC5ZwbE6pN8vPG7Uo5tz37FdsKeSTrwmUZRVvD6idej",
    "ownership_model": "single",
    "owner": "3aJAkm3pSrT9jL3xHnbzmzooptDsPunZp68seAQbBpE7"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
