integration_tests/tests/integration_tests/snapshots/integration_tests__cnft_tests_v2_leaf_schema__mint_v2_to_collection_only.snap
---
source: integration_tests/tests/integration_tests/cnft_tests_v2_leaf_schema.rs
expression: response
---
{
  "interface": "MplBubblegumV2",
  "id": "HGu4vJMLCboGNNVnH6UXrQZKVVXBX4xMZFxfmFgQD9pG",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "AmLARpsGgzBjLBHWec6pdrCMdUcvYD2sk8rqAPY6YugT",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EujDnKsdu6xLGhMfANRf6tnCW6FFWXesGcerKVT8gCRV",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "FVuxWRAhfhdUKCKkpSqtUD9Di7kqPeLSTNtQxBDCnBAe",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "EFsPZmzJGtd1Qf811F8QhBFaMDtZKfH1VNqXnLdySNT3",
    "tree": "AhJzCEHPAi4wfJdRfYmN2dMEafmQQXYSFfjhF6CxQpYA",
    "seq": 1,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "7KdCe4Wbjdt6HLAW8LtgHg4c1pTHkmw4R48JW3EBRPLz"
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "2jHESr9XCxaUtAqUCq3GR5WxeVYkWafoakt2aXojhCQ8"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
